--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header{
     transition: all 0.5s ease-out;
 }
 .verificar:hover{
-    transform: scale(1.05);
+    transform: scale(1.02);
     background-color: rgb(0, 238, 255);
     opacity: 0.9;
 }
@@ -57,4 +57,8 @@ header{
     height: 50px;
     width: 409px;
     font-size: 35px;
+}
+body{
+    height: 100vh;
+    margin: 0;
 }
