--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header{
     height: 20px;
     width: 409px;
     font-size: 19px;
+    font-weight: bold;
 }
 .verificar{
     position: absolute;
